force-app/main/default/objects/APEX_Customer__c/APEX_Customer__c.object-meta.xml
<CustomObject>
    <description>Information related to customers</description>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>