force-app/main/default/objects/APEX_Customer__c/fields/APEX_Active__c.field-meta.xml
<CustomField>
    <fullName>APEX_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>