force-app/main/default/objects/APEX_Customer__c/fields/APEX_Customer_Description__c.field-meta.xml
<CustomField>
    <fullName>APEX_Customer_Description__c</fullName>
    <label>Customer Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>