force-app/main/default/objects/APEX_Customer__c/fields/APEX_External_ID__c.field-meta.xml
<CustomField>
    <fullName>APEX_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>